example/injected/rbac.yaml
# This file should be applied to each namespace where Shawarma sidecars are in use
# It creates a service account and token to be attached to the Shawarma sidecar
apiVersion: v1
kind: Namespace
metadata:
  name: shawarma-example
  labels:
    shawarma-injection: enabled
