example/injected/k8s-sidecar-injector.yaml
apiVersion: v1
kind: Service
metadata:
  name: shawarma-webhook
  namespace: kube-system
  labels:
    k8s-app: shawarma-webhook
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  selector:
    k8s-app: shawarma-webhook
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shawarma-webhook
  namespace: kube-system
  labels:
    k8s-app: shawarma-webhook
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        k8s-app: shawarma-webhook
    spec:
      serviceAccountName: shawarma-webhook
      volumes:
      - name: secrets
        secret:
          secretName: shawarma-webhook
      containers:
      - name: shawarma-webhook
        imagePullPolicy: Always
        image: centeredge/shawarma-webhook:0.2.0
        ports:
        - name: https
          containerPort: 443
        volumeMounts:
        - name: secrets
          mountPath: /etc/shawarma-webhook/certs
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /health
            port: https
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: "0.5"
            memory: 1Gi
          limits:
            cpu: "0.5"
            memory: 2Gi
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: shawarma-webhook
  labels:
    k8s-app: shawarma-webhook
webhooks:
- name: "webhook.shawarma.centeredge.io"
  failurePolicy: "Ignore" # we fail "open" if the webhook is down hard
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  namespaceSelector:
    # Require that the namespace have the `shawarma-injection: enabled` label
    matchExpressions:
    - key: shawarma-injection
      operator: In
      values: ["enabled"]
  clientConfig:
    service:
      name: shawarma-webhook
      namespace: kube-system
      path: "/mutate"
    # Signing CA for the certificate placed in the secret above
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZ5ekNDQTdNQ0ZHWHhDbjVNSi9QcFNKSlIveEFHSFVPS1VudUtNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1JR2cKTVFzd0NRWURWUVFHRXdKVlV6RVhNQlVHQTFVRUNBd09UbTl5ZEdnZ1EyRnliMnhwYm1FeEVEQU9CZ05WQkFjTQpCMUp2ZUdKdmNtOHhIREFhQmdOVkJBb01FME5sYm5SbGNrVmtaMlVnVTI5bWRIZGhjbVV4SERBYUJnTlZCQU1NCkUzTm9ZWGRoY20xaExYZGxZbWh2YjJzdFEwRXhLakFvQmdrcWhraUc5dzBCQ1FFV0cyNTFiR3hBYzJoaGQyRnkKYldFdVkyVnVkR1Z5WldSblpTNXBiekFnRncweE9UQTNNekF4TlRBeE5EQmFHQTgwTnpVM01EWXlOVEUxTURFMApNRm93Z2FBeEN6Q [...]
